# opencv_ros_ws

./: README.md
devel/: .catkin  _setup_util.py  setup.sh
devel/include/object_segmentation/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
devel/lib/object_segmentation/: client1  client2  image_receiver  talker
devel/lib/pkgconfig/: object_segmentation.pc
devel/lib/python2.7/dist-packages/object_segmentation/msg/: _Num.py
devel/lib/python2.7/dist-packages/object_segmentation/srv/: _AddTwoInts.py
devel/share/common-lisp/ros/object_segmentation/msg/: Num.lisp  _package.lisp  _package_Num.lisp  object_segmentation-msg.asd
devel/share/common-lisp/ros/object_segmentation/srv/: AddTwoInts.lisp  _package.lisp  _package_AddTwoInts.lisp  object_segmentation-srv.asd
devel/share/gennodejs/ros/object_segmentation/msg/: Num.js
devel/share/gennodejs/ros/object_segmentation/srv/: AddTwoInts.js
devel/share/object_segmentation/cmake/: object_segmentation-msg-extras.cmake  object_segmentation-msg-paths.cmake  object_segmentationConfig.cmake
devel/share/roseus/ros/object_segmentation/: manifest.l
devel/share/roseus/ros/object_segmentation/msg/: Num.l
devel/share/roseus/ros/object_segmentation/srv/: AddTwoInts.l
src/object_segmentation/: CMakeLists.txt
src/object_segmentation/scripts/: listener.py  publish_subscribe.py  rgb2hsv.py  server.py  talker.py
src/object_segmentation/src/: client1.cpp  client2.cpp  object_segmentation.cpp  talker.cpp  源.cpp
